// Vitest Snapshot v1

exports[`BackTop > BackTop baseVue demo works fine 1`] = `
<div
  data-v-33e4f6e7=""
>
  <div
    class="button-group"
    data-v-33e4f6e7=""
  >
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-33e4f6e7=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆角白底
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-33e4f6e7=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆角黑底
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-33e4f6e7=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆白底纯图标
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-33e4f6e7=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆黑底纯图标
        
      </span>
    </button>
  </div>
  <p
    class="tdesign-mobile-demo-block__summary"
    data-v-33e4f6e7=""
  >
    半圆型返回顶部
  </p>
  <div
    class="button-group"
    data-v-33e4f6e7=""
  >
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-33e4f6e7=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        半圆白底
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-33e4f6e7=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        半圆黑底
        
      </span>
    </button>
  </div>
  <div
    class="t-back-top t-is-fixed t-back-top--round"
    data-v-33e4f6e7=""
    style="display: none;"
  >
    <svg
      class="t-icon t-icon-backtop"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-back-top__text"
      style="min-width: 12px; max-width: 24px; width: auto; display: inline-block;"
    >
      顶部
    </span>
  </div>
  <div
    class="t-back-top t-is-fixed t-back-top--round"
    data-v-33e4f6e7=""
    style="display: none;"
  >
    <svg
      class="t-icon t-icon-backtop"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <span
      class="t-back-top__text"
      style="min-width: 12px; max-width: 24px; width: auto; display: inline-block;"
    >
      返回顶部
    </span>
  </div>
</div>
`;

exports[`BackTop > BackTop halfRoundVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="button-group"
    data-v-924378ec=""
  >
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-924378ec=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        半圆白底
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-924378ec=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        半圆黑底
        
      </span>
    </button>
  </div>
  <div
    data-v-924378ec=""
  >
    <div
      class="t-back-top t-is-fixed t-back-top--half-round"
      data-v-924378ec=""
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-back-top__text"
        style="min-width: 12px; max-width: 24px; width: auto; display: inline-block;"
      >
        返回顶部
      </span>
    </div>
  </div>
  
</div>
`;

exports[`BackTop > BackTop mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-806aae90=""
  style="background-color: rgb(255, 255, 255);"
>
  <h1
    class="title"
    data-v-806aae90=""
  >
    BackTop 回到顶部
  </h1>
  <p
    class="summary"
    data-v-806aae90=""
  >
    当页面过长往下滑动是会出现返回顶部的便捷操作，帮助用户快速回到页面顶部
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      圆型返回顶部
    </p>
    
    
    <div
      class="button-group"
      data-v-915cc230=""
    >
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-915cc230=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          圆角白底
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-915cc230=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          圆角黑底
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-915cc230=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          圆白底纯图标
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-915cc230=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          圆黑底纯图标
          
        </span>
      </button>
    </div>
    <div
      data-v-915cc230=""
    >
      <div
        class="t-back-top t-is-fixed t-back-top--round"
        data-v-915cc230=""
        style="display: none;"
      >
        <svg
          class="t-icon t-icon-backtop"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <span
          class="t-back-top__text"
          style="min-width: 12px; max-width: 24px; width: auto; display: inline-block;"
        >
          顶部
        </span>
      </div>
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      半圆型返回顶部
    </p>
    
    
    <div
      class="button-group"
      data-v-924378ec=""
    >
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-924378ec=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          半圆白底
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
        data-v-924378ec=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          半圆黑底
          
        </span>
      </button>
    </div>
    <div
      data-v-924378ec=""
    >
      <div
        class="t-back-top t-is-fixed t-back-top--half-round"
        data-v-924378ec=""
        style="display: none;"
      >
        <svg
          class="t-icon t-icon-backtop"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <span
          class="t-back-top__text"
          style="min-width: 12px; max-width: 24px; width: auto; display: inline-block;"
        >
          返回顶部
        </span>
      </div>
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="group"
      data-v-806aae90=""
    >
      
      <div
        class="t-skeleton item"
        data-v-806aae90=""
      >
        
        <div
          class="t-skeleton__content"
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        
      </div>
      <div
        class="t-skeleton item"
        data-v-806aae90=""
      >
        
        <div
          class="t-skeleton__content"
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        
      </div>
      <div
        class="t-skeleton item"
        data-v-806aae90=""
      >
        
        <div
          class="t-skeleton__content"
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        
      </div>
      <div
        class="t-skeleton item"
        data-v-806aae90=""
      >
        
        <div
          class="t-skeleton__content"
        >
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
            />
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 100px;"
            />
            
          </div>
          
        </div>
        
      </div>
      
    </div>
    
  </div>
  <div
    class="blank"
    data-v-806aae90=""
  />
</div>
`;

exports[`BackTop > BackTop roundVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="button-group"
    data-v-915cc230=""
  >
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-915cc230=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆角白底
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-915cc230=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆角黑底
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-915cc230=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆白底纯图标
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
      data-v-915cc230=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        圆黑底纯图标
        
      </span>
    </button>
  </div>
  <div
    data-v-915cc230=""
  >
    <div
      class="t-back-top t-is-fixed t-back-top--round"
      data-v-915cc230=""
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-back-top__text"
        style="min-width: 12px; max-width: 24px; width: auto; display: inline-block;"
      >
        顶部
      </span>
    </div>
  </div>
  
</div>
`;

exports[`BackTop > BackTop targetVue demo works fine 1`] = `
<div>
  <span />
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-back-top t-is-fixed t-back-top--round"
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`BackTop > BackTop themeVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-back-top t-is-fixed t-back-top--half-round-dark"
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <!--v-if-->
    </div>
    <div
      class="t-back-top t-is-fixed t-back-top--round"
      style="display: none;"
    >
      
      <div>
        图标
      </div>
      
      <span
        class="t-back-top__text"
        style="min-width: 12px; max-width: 24px; width: auto; display: inline-block;"
      >
        顶部
      </span>
    </div>
  </div>
</div>
`;
